# aws-config-restore

./: .gitignore  LICENSE  MANIFEST.in  README.md  app.py  config.yaml  pyproject.toml  requirements.txt  setup.py
app/: __main__.py  loadconfigs.py  normalizeparameters.py
app/app/: cloudfronthelper.py  loadconfigs.py  mainhelper.py  normalizeparameters.py  wafhelper.py
app/data/: config.yaml  reference_cloudfront.json  reference_waf_webacl.json
app/examples/: example.json
aws_config_restore.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
examples/: configexample.json  diagram.drawio  run.docx
